--- a/src/client/views/app/App.css
+++ b/src/client/views/app/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: fadeout infinite 20s linear;
   }
 }
 
@@ -28,11 +28,20 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes fadeout {
+  0% {
+      transform: scale(0.96);
+      /* transform-origin: 50% 50%; */
+      opacity:0.5;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+      transform: scale(1);
+      /* transform-origin: 50% 50%; */
+      opacity:1;
   }
-}
+  100% {
+      transform: scale(0.96);
+      /* transform-origin: 50% 50%; */
+      opacity:0.5;
+  }
+  }
